--- a/Website/site.html
+++ b/Website/site.html
@@ -20,7 +20,7 @@ img {margin-bottom: -8px;}
 <header class="w3-display-container w3-center">
   <button class="w3-button w3-block w3-green w3-hide-large w3-hide-medium" onclick="document.getElementById('download').style.display='block'">Download <i class="fa fa-android"></i> <i class="fa fa-apple"></i> <i class="fa fa-windows"></i></button>
   <div class="mySlides w3-animate-opacity">
-    <img class="w3-image" src="board.png" alt="Image 1" style="min-width:500px" width="1500" height="1000">
+    <img class="w3-image" src="board.png" alt="Image 1" style="min-width:500px" width="1000" >
     <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
       <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
         <h1 class="w3-xlarge">Detect faces with our app</h1>
@@ -31,7 +31,7 @@ img {margin-bottom: -8px;}
     </div>
   </div>
   <div class="mySlides w3-animate-opacity">
-    <img class="w3-image" src="age1.png" alt="Image 2" style="min-width:500px" width="1500" height="1000">
+    <img class="w3-image" src="age1.png" alt="Image 2" style="min-width:500px" width="1000">
     <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
       <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
         <h1 class="w3-xlarge w3-text-red"><b>CLICK!</b> Fast and Easy</h1>
@@ -42,7 +42,7 @@ img {margin-bottom: -8px;}
     </div>
   </div>
   <div class="mySlides w3-animate-opacity">
-    <img class="w3-image" src="gender1.jpeg" alt="Image 3" style="min-width:500px" width="1500" height="1000">
+    <img class="w3-image" src="gender1.jpeg" alt="Image 3" style="min-width:500px" width="1000">
     <div class="w3-display-left w3-padding w3-hide-small" style="width:35%">
       <div class="w3-black w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
         <h1 class="w3-xlarge">Smart Design</h1>
